fix about section flex rows alignment issuses, add education section

--- a/src/app.css
+++ b/src/app.css
@@ -22,7 +22,7 @@ h3,
 }
 
 .blueShadow {
-  box-shadow: 0px 14px 55px rgba(109, 40, 217, 0.45);
+  box-shadow: 0px 14px 25px rgba(109, 40, 217, 0.35);
 }
 
 .img {
